environments/gloo-edge/ggv2/gloo-gateway-v2-config/base/argocd-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argocd
  labels:
    example: argocd-route
    gateway: http
spec:
  parentRefs:
    - name: http
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /argo
      backendRefs:
      - name: argocd-server
        port: 80
