environments/gloo-edge/ggv2/gloo-gateway-v2-config/base/argocd-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
  labels:
    example: argocd-route
    gateway: https
spec:
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
